<resources>
    <string name="app_name">TileIsland</string>
    <string name="are_you_a_parent">Are you a parent? Click Here!!</string>
    <string name="register_new_kid">New Kid? Register Here!</string>
    <string name="register_firstname">first name</string>
    <string name="register_lastname">last name</string>
    <string name="register_kid">Register !!</string>
    <string name="register_password">password</string>
    <string name="firstname">firstname</string>
    <string name="password">password</string>
    <string name="kid_registration">Kid\'s Registration</string>
    <string name="parents_profile">Parent\'s Profile</string>
    <string name="kid_firstname">your child\'s name</string>
    <string name="kid_password">password</string>
    <string name="get_report">Get Report !</string>
    <string name="lets_start_level1">Let\'s start Level 1 !!</string>
    <string name="levelOne_stageOne">1</string>
    <string name="levelOne_stageTwo">2</string>
    <string name="levelOne_stageThree">3</string>
    <string name="coinlabel">Coins : </string>
    <string name="scorelabel">Score : </string>
    <string name="blank"> </string>
    <string name="moveup">up</string>
    <string name="movedown">down</string>
    <string name="moveleft">left</string>
    <string name="moveright">right</string>
    <string name="youwin">You Win!!</string>
    <string name="lets_start_level2">Let\'s start level 2 !!</string>
    <string name="levelTwo_stageOne">1</string>
    <string name="levelTwo_stageTwo">2</string>
    <string name="levelTwo_stageThree">3</string>
    <string name="your_child_report">Your Child\'s Report !</string>
    <string name="colon"> :</string>
    <string name="get_leader_board">Leader Board!</string>
    <string name="leader_board">Leader Board</string>
</resources>
