<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/register_player"
    tools:context="com.example.android.tileisland.RegisterKid">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@drawable/ic_arrow_back_black_24dp"
        android:onClick="onBackClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kid_registration"
        android:layout_alignParentRight="true"
        android:textStyle="italic|bold"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/etRegisterFirstName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="50dp"
        android:padding="5dip"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/register_firstname"/>

    <EditText
        android:id="@+id/etRegisterLastName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etRegisterFirstName"
        android:layout_marginTop="20dp"
        android:padding="5dip"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/register_lastname"/>

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etRegisterLastName"
        android:layout_marginTop="20dp"
        android:padding="5dip"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/register_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/bRegister"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etRegisterPassword"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_register"
        android:onClick="onRegisterKidClick"
        android:text="@string/register_kid"/>

</RelativeLayout>
