<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_level_one_stages"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/levelonestages"
    tools:context="com.example.android.tileisland.LevelOneStages">

    <TextView
        android:id="@+id/blevelOne_stageOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:background="@null"
        android:text="@string/levelOne_stageOne"
        android:textSize="80sp"
        android:textStyle="bold"
        android:onClick="onLevelOneStageOneClick" />
    <TextView
        android:id="@+id/blevelOne_stageTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/blevelOne_stageOne"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:textSize="80sp"
        android:textStyle="bold"
        android:text="@string/levelOne_stageTwo"
        android:onClick="onLevelOneStageTwoClick" />
    <TextView
        android:id="@+id/blevelOne_stageThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/blevelOne_stageTwo"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"
        android:textSize="80sp"
        android:textStyle="bold"
        android:text="@string/levelOne_stageThree"
        android:onClick="onLevelOneStageThreeClick" />

</RelativeLayout>
